<resources>
    <string name="app_name">一里递商家版</string>
    <string name="http_exception">系统发生异常，请稍后重试</string>
    <string name="http_failure">数据请求失败，请联系客服或稍后重试</string>
    <string name="http_time_out">请求超时，请选择较好的网络环境</string>
    <string name="http_network">网络出现异常，请检查您的网络状况</string>
    <string name="http_own_response">您的请求被劫持，请检查系统是否中毒或重新下载官方最新客户端</string>
    <string name="double_exit_notify">再按一次，退出应用</string>
    <string name="money_flag">¥</string>
    <string name="pull_up_no_more_data">已经没有更多数据了</string>
    <string name="common_dialog_title">温馨提示</string>
    <string name="three_dialog_title">请选择</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_confirm">确认</string>
    <string name="cart_item_notify">最快30分钟送达，满20免运费</string>
    <string name="no_finish">功能暂未开放，敬请期待！</string>
    <string name="loading">正在加载中&#8230;</string>
    <string name="customer_service_line">4001&#8211;333&#8211;866</string>
    <string name="investment_service_line">0755&#8211;83212870</string>
    <string name="guide_button">立即体验</string>
    <string name="product_has_enough_stock">亲，该产品没有足够的库存了，我们的仓库正在积极备货当中，请耐心等待</string>
    <string name="product_has_limit_count">亲，该产品已经限制了购买%1$s件，请查看您的购物车</string>
    <string name="all_check">全选</string>
    <string name="pay_request_exception">订单生成成功，但发起支付时出现异常，请稍后查看订单进行支付</string>
    <string name="main_features_navigation">功能导航</string>
    <string name="main_bill_settlement">账单结算</string>
    <string name="main_for_accept_order_count">待接收订单</string>
    <string name="main_today_order_amount">今日营收</string>
    <string name="main_today_invite_count">今日推广用户</string>
    <string name="main_catalog_order">订单管理</string>
    <string name="main_catalog_order_remark">用户订单查看、配送、收货</string>
    <string name="main_catalog_invite">店铺推广</string>
    <string name="main_catalog_invite_remark">邀请用户注册返现</string>
    <string name="main_catalog_product">商品管理</string>
    <string name="main_catalog_product_remark">店铺商品上架、下架、库存等</string>
    <string name="main_catalog_store">店铺管理</string>
    <string name="main_catalog_store_remark">店铺基本信息查看、修改等</string>
    <string name="main_catalog_statistics">数据统计</string>
    <string name="main_catalog_statistics_remark">推广提成、销售返款、订单统计等</string>
    <string name="main_connect">联系客服</string>
    <string name="main_connect_desc">服务经理、客服等联系方式</string>
    <string name="main_catalog_allot">我要调货</string>
    <string name="main_catalog_allot_remark">采购商品、补充库存</string>
    <string name="main_business">营业时间：%1$s&#8211;%2$s</string>
    <string name="main_user_name">%1$s</string>
    <string name="main_store_name">%1$s(%2$s)</string>
    <string name="main_total_sum">总量:&#160;%1$s&#160;</string>
    <string name="main_total_count">总数:&#160;%1$s&#160;</string>
    <string name="main_total_money">总额:&#160;%1$s&#160;</string>
    <string name="main_people_unit">人</string>
    <string name="main_money_unit">元</string>
    <string name="main_count_unit">单</string>
    <string name="main_today_order">当日订单</string>
    <string name="main_will_over_order">应结算订单</string>
    <string name="main_over_order">已结算订单</string>
    <string name="main_vip_count">当日推广VIP用户</string>
    <string name="main_will_promotion_money">应结算推广费</string>
    <string name="main_promotion_money">已结算推广费</string>
    <string name="order_wait_receive">待接单</string>
    <string name="order_wait_send">待发货</string>
    <string name="order_wait_confirm">待确认</string>
    <string name="order_finished">已完成</string>
    <string name="order_canceled">已取消</string>
    <string name="order_search_empty_notify">请输入你所需要查询订单的手机号</string>
    <string name="order_search_hint">请输入查询的手机号、订单号或姓名</string>
    <string name="order_receive_btn">收货码</string>
    <string name="order_delivery_time">预计送达时间：%1$s</string>
    <string name="order_total_amount">订单金额：%1$s</string>
    <string name="order_type_normal">普通订单</string>
    <string name="order_type_another">其他订单</string>
    <string name="order_list_empty_notify">您暂时没有该类型的订单</string>
    <string name="order_receive_windows_label">请输入收货码：</string>
    <string name="order_list_pick_up_label">用户上门自提</string>
    <string name="order_list_pick_up_time">于营业结束前自提</string>
    <string name="order_detail">&#160;&#160;&#160;&#160;订单详情&#160;&#160;&#160;&#160;</string>
    <string name="order_detail_back">订单返款明细</string>
    <string name="order_detail_delivery">配送信息</string>
    <string name="order_detail_products">商品信息</string>
    <string name="order_detail_item_count">x%1$s</string>
    <string name="order_detail_total_amount">订单金额</string>
    <string name="order_detail_product_count">商品金额（共%1$s件）：</string>
    <string name="order_detail_promotion_amount">优惠金额：</string>
    <string name="order_detail_delivery_amount">配送金额：</string>
    <string name="order_detail_back_info">返款结算明细</string>
    <string name="order_detail_submit_receive">确认接单</string>
    <string name="order_detail_submit_notify_content">您有新的订单了，是否立即接单？</string>
    <string name="order_detail_submit_notify_cancel">不接单</string>
    <string name="order_detail_submit_notify_confirm">立即接单</string>
    <string name="order_detail_submit_send">确认发货</string>
    <string name="order_detail_submit_pickup">确认提货</string>
    <string name="order_detail_submit_finish">确认收货</string>
    <string name="order_detail_status">订单状态：</string>
    <string name="order_detail_info">订单信息</string>
    <string name="order_detail_info_no">订单编号：</string>
    <string name="order_detail_info_time">下单时间：</string>
    <string name="order_detail_info_delivery_type">配送方式：</string>
    <string name="order_detail_info_delivery_time">配送时间：</string>
    <string name="order_detail_info_delivery_type_value">%1$s（推荐）</string>
    <string name="order_detail_info_pay_type">支付方式：</string>
    <string name="order_detail_info_pay_time">支付时间：</string>
    <string name="order_detail_info_receive_time">接单时间：</string>
    <string name="order_detail_info_send_time">发货时间：</string>
    <string name="order_detail_info_finish_time">完成时间：</string>
    <string name="order_detail_info_cancel_time">取消时间：</string>
    <string name="order_detail_info_remark">其他需求：</string>
    <string name="order_detail_info_remark_empty">无</string>
    <string name="order_detail_delivery_time">预计送达时间：%1$s</string>
    <string name="order_detail_back_title">返款结算说明：</string>
    <string name="order_detail_back_content_1">1、只有交易成功的订单才能进行返款结算</string>
    <string name="order_detail_back_content_2">2、每天凌晨2点，系统自动核算前一天的订单</string>
    <string name="order_detail_back_content_3">3、每月1&#8211;5号，可对上月的返款额进行提现</string>
    <string name="order_detail_back_content_4">4、出现退货商品，会扣除返款金额</string>
    <string name="order_detail_back_total_count">返款商品数：%1$s件</string>
    <string name="order_detail_back_total_amount">可返款金额数：%1$s</string>
    <string name="order_detail_pick_up_label">自提</string>
    <string name="order_detail_pick_up_time">自提时间：于营业结束前自提</string>
    <string name="class_product_offline">下架</string>
    <string name="class_product_online">上架</string>
    <string name="class_online_now">销售中</string>
    <string name="class_offline_now">已下架</string>
    <string name="class_third">三级分类</string>
    <string name="class_default_sort">默认排序</string>
    <string name="class_stock_up_to_down">库存最高</string>
    <string name="class_stock_down_to_up">库存最低</string>
    <string name="class_sale_up_to_down">销量最高</string>
    <string name="class_sale_down_to_up">销量最低</string>
    <string name="no_choice_product">亲，你没有选择需要操作的商品哦！</string>
    <string name="class_product_retail_price">普通：%1$s</string>
    <string name="class_product_promotion_price">VIP：%1$s</string>
    <string name="class_product_sale_count">总销量：%1$s</string>
    <string name="class_product_stock_num">剩余库存：%1$s</string>
    <string name="class_product_choice_off_confirm">确定要下架所选商品么？</string>
    <string name="class_product_choice_on_confirm">确定要上架所选商品么？</string>
    <string name="class_product_list_empty_notify">该类型下暂无商品</string>
    <string name="brand_product_list_empty_notify">该品牌下暂无商品</string>
    <string name="allot_product_confirm">加入购物车</string>
    <string name="allot_product_per_count">起订数量(%1$s件)</string>
    <string name="allot_product_error_empty">亲，您还没有加入任何商品</string>
    <string name="allot_product_total">商品总数：%1$s件</string>
    <string name="allot_product_price">进货价：%1$s</string>
    <string name="allot_product_warehouse">微仓库存：%1$s</string>
    <string name="allot_product_stock">本店库存：%1$s</string>
    <string name="allot_product_list_empty_notify">该类型下暂无商品</string>
    <string name="allot_cart_remark">备注：</string>
    <string name="allot_cart_remark_hint">想对微仓老板说点啥&#8230;</string>
    <string name="allot_cart_address_label">配送至</string>
    <string name="allot_cart_empty_product_confirm">亲，您没有选择要下单的商品哦！</string>
    <string name="allot_cart_confirm">生成调货单</string>
    <string name="allot_cart_total_count">调拨商品数量：</string>
    <string name="allot_cart_total_amount">调货单金额：</string>
    <string name="allot_cart_single_delete">是否确定要删除该商品</string>
    <string name="allot_cart_multi_delete">是否确定要删除所选择的所有商品</string>
    <string name="allot_cart_delete">删除</string>
    <string name="allot_cart_empty_delete">亲，您如果需要删除购物车信息需要先选择您要删除的商品哦！</string>
    <string name="allot_success_content1">恭喜您，调拨申请已成功</string>
    <string name="allot_order_no">调拨单号：</string>
    <string name="allot_form_warehouse">调出仓库：</string>
    <string name="allot_total_count">调拨数量：</string>
    <string name="allot_create_time">申请时间：</string>
    <string name="allot_load_order">查看调货单</string>
    <string name="allot_shopping">返回首页</string>
    <string name="allot_notification">如有问题可联系客服：4001333866</string>
    <string name="allot_order_not_finish">未完成</string>
    <string name="allot_order_finished">已完成</string>
    <string name="allot_order_count">+%1$s件</string>
    <string name="allot_order_list_empty_notify">您暂时还没有该类型的调货单</string>
    <string name="allot_order_detail">调货单详情</string>
    <string name="allot_order_detail_record">调货单记录</string>
    <string name="allot_order_detail_info">调拨情况</string>
    <string name="allot_order_detail_no">调拨单号：</string>
    <string name="allot_order_detail_from">调出仓库：</string>
    <string name="allot_order_detail_to">调入仓库：</string>
    <string name="allot_order_detail_count">申请调拨数量：</string>
    <string name="allot_order_detail_real_count">实际调拨数量：</string>
    <string name="allot_order_detail_time">申请时间：</string>
    <string name="invite_send_to_friends">发送推荐码给好友</string>
    <string name="invite_total_title">这些好友才是我的好基友</string>
    <string name="invite_code_text_1">推荐好友，立得优惠~~~</string>
    <string name="invite_code_text_2">成为VIP，享全年无忧购物，低价新体验！</string>
    <string name="invite_code_yours">您的推荐码</string>
    <string name="invite_code_step_1">成功邀请好友下载一里递</string>
    <string name="invite_code_step_2">注册中输入推荐码</string>
    <string name="invite_code_step_3">升级成VIP</string>
    <string name="invite_list_guide_title">规则说明：</string>
    <string name="invite_list_guide_content1">一、什么是邀请码？</string>
    <string name="invite_list_guide_content11">1.邀请码是合伙人邀请消费者的标识码。</string>
    <string name="invite_list_guide_content2">二、奖励细则：</string>
    <string name="invite_list_guide_content21">1.输入合伙人邀请码成为普通会员的用户，购买升级套餐后转化为合伙人邀请的VIP用户。</string>
    <string name="invite_list_guide_content22">2.每转化一名输入过邀请码的VIP用户，合伙人可获得40元现金奖励。转化越多，奖励越多。</string>
    <string name="invite_list_guide_content23">3.本月结算上月奖励。</string>
    <string name="login_mobile">手机号：</string>
    <string name="login_password">密&#160;&#160;&#160;&#160;码：</string>
    <string name="login_mobile_hint">请输入手机号</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_forget_notify1">忘记密码？</string>
    <string name="login_forget_notify2">使用手机验证码直接登录</string>
    <string name="login_btn">立即登录</string>
    <string name="statistics_vip_count">铂金会员数</string>
    <string name="statistics_order_back">订单返款金额</string>
    <string name="statistics_order_count">订单完成数</string>
</resources>