<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/background"
              android:orientation="vertical">

    <include layout="@layout/action_bar_main"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_normal_height"
        android:layout_marginTop="@dimen/margin_big"
        android:background="@color/white"
        android:paddingLeft="@dimen/normal_margin_lr"
        android:paddingRight="@dimen/normal_margin_lr">

        <TextView
            android:id="@+id/tv_login_mobile"
            style="@style/TextAppearance.Normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/tiny_text_gap"
            android:layout_marginRight="@dimen/tiny_text_gap"
            android:text="@string/login_mobile"/>

        <com.yldbkd.www.library.android.viewCustomer.ClearableEditText
            android:id="@+id/cet_login_mobile"
            style="@style/TextAppearance.Normal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/normal_margin_lr"
            android:layout_marginRight="@dimen/normal_margin_lr"
            android:layout_toEndOf="@id/tv_login_mobile"
            android:layout_toRightOf="@id/tv_login_mobile"
            android:background="@color/transparent"
            android:hint="@string/login_mobile_hint"
            android:inputType="phone"
            android:maxLength="11"
            android:textColorHint="@color/lightText"/>
    </RelativeLayout>

    <include layout="@layout/divider_layout_2"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_normal_height"
        android:background="@color/white"
        android:paddingBottom="@dimen/margin_small"
        android:paddingLeft="@dimen/normal_margin_lr"
        android:paddingRight="@dimen/normal_margin_lr"
        android:paddingTop="@dimen/margin_small">

        <TextView
            android:id="@+id/tv_login_check_label"
            style="@style/TextAppearance.Normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/tiny_text_gap"
            android:layout_marginRight="@dimen/tiny_text_gap"
            android:text="@string/login_password"/>

        <CheckBox
            android:id="@+id/cb_login_eye"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/normal_margin_lr"
            android:layout_marginRight="@dimen/normal_margin_lr"
            android:button="@drawable/visitable_selector"
            android:checked="false"/>

        <com.yldbkd.www.library.android.viewCustomer.ClearableEditText
            android:id="@+id/cet_login_pwd"
            style="@style/TextAppearance.Normal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/tv_login_check_label"
            android:layout_toLeftOf="@id/cb_login_eye"
            android:layout_toRightOf="@id/tv_login_check_label"
            android:layout_toStartOf="@id/cb_login_eye"
            android:background="@color/transparent"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            android:maxLength="16"
            android:textColorHint="@color/lightText"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/tv_login_forget_notify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/normal_margin_lr">

        <TextView
            style="@style/TextAppearance.Normal.Light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_forget_notify1"/>

        <TextView
            style="@style/TextAppearance.Normal.Blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_forget_notify2"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        style="@style/TextAppearance.Normal.White"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_big_height"
        android:layout_margin="@dimen/normal_margin_lr"
        android:background="@drawable/button_blue_selector"
        android:text="@string/login_btn"/>
</LinearLayout>