<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/action_bar_main" />

    <TextView
        style="@style/TextAppearance.Big"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normal_margin_lr"
        android:text="@string/invite_code_text_1" />

    <TextView
        style="@style/TextAppearance.Normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/normal_margin_lr"
        android:layout_marginRight="@dimen/normal_margin_lr"
        android:text="@string/invite_code_text_2" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/invite_bg" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <TextView
                style="@style/TextAppearance.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/invite_code_yours" />

            <TextView
                android:id="@+id/tv_invite_code"
                style="@style/TextAppearance.Normal.Blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/invite_code_margin_left"
        android:layout_marginStart="@dimen/invite_code_margin_left"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/invite_step_1" />

        <TextView
            style="@style/TextAppearance.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/normal_text_gap"
            android:layout_marginStart="@dimen/normal_text_gap"
            android:text="@string/invite_code_step_1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/invite_code_margin_left"
        android:layout_marginStart="@dimen/invite_code_margin_left"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/invite_step_2" />

        <TextView
            style="@style/TextAppearance.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/normal_text_gap"
            android:layout_marginStart="@dimen/normal_text_gap"
            android:text="@string/invite_code_step_2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/invite_code_margin_left"
        android:layout_marginStart="@dimen/invite_code_margin_left"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/invite_step_3" />

        <TextView
            style="@style/TextAppearance.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/normal_text_gap"
            android:layout_marginStart="@dimen/normal_text_gap"
            android:text="@string/invite_code_step_3" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_invite_share_code"
        android:layout_width="@dimen/button_normal_width"
        android:layout_height="@dimen/button_normal_height"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button_blue_selector"
        android:text="@string/invite_send_to_friends"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tv_invite_code_2d"
        style="@style/TextAppearance.Normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/invite_code_margin_bottom" />
</LinearLayout>